src/components/page-home/page-home.css
.app-home {
  padding: 10px;
}

section.hero {
  padding-top: 64px;
  padding-bottom: 64px;

  text-align: center;
}

page-home .logo {
  display: block;
  width: 256px;
  margin: 0 auto;
}

.pretagline {
  font-family: var(--font-body);
  font-weight: normal;
  margin: 0;
  color: rgba(0,0,0,0.54);
}

.tagline {
  font-family: var(--font-display);
  margin: 12px;
  font-size: 32px;
  color: rgba(0,0,0,0.87);
}

section.cta {
  margin-bottom: 64px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.prompt {
  display: block;
  width: 100%;
  max-width: 840px;
  background-color: black;
  color: white;
  padding: 32px;
  padding-top: 0;
  border-radius: 8px;

  font-family: var(--font-code);
  box-shadow: 0 4px 12px rgba(0,0,0,0.12);
}

.prompt .text {
  position: relative;
  display: inline-block;
}

.prompt .dots {
  height: 36px;
  width: 100%;
  display: flex;
  align-items: center;
  margin-bottom: 16px;
}

.prompt .dots span {
  display: inline-block;
  width: 10px;
  height: 10px;
  border-radius: 5px;
  margin-right: 12px;
  background: var(--color-accent);
}
.prompt .dots span:nth-of-type(2) {
  background: var(--color-primary);
}
.prompt .dots span:nth-of-type(3) {
  background: var(--color-success);
}

.prompt .symbol {
  color: var(--color-notify);
  user-select: none;
}

.prompt .highlight {
  display: block;
  cursor: pointer;
  padding: 0 6px;
  margin-left: -6px;
  transition: all 250ms cubic-bezier(0.23, 1, 0.320, 1);
}

.prompt .highlight:active {
  background-color: rgba(255, 255, 255, 0.25);
}

.prompt .copy-confirm {
  user-select: none;
  opacity: 0;
  position: absolute;
  transform: translateY(0);
  transition: all 250ms cubic-bezier(0.23, 1, 0.320, 1);
}

.prompt.copied .highlight {
  transform: translateY(-1.2em);
  opacity: 0;
}
.prompt.copied .copy-confirm {
  transform: translateY(-1.2em);
  opacity: 1;
}

section.benefits {
  width: 100%;
  max-width: 1080px;
  margin: 0 auto;
}

section.benefits .container {
  padding: 0 12px;
  display: grid;
  grid-template-rows: repeat(6, 1fr);
  grid-auto-flow: column;
  grid-gap: 16px;
}

@media (min-width: 640px) {
  section.benefits .container {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, 1fr);
  }
}

@media (min-width: 1080px) {
  section.benefits .container {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 1fr);
  }
}

section.benefits h3 {
  margin-bottom: 0;
}
section.benefits p {
  margin-top: 0.5em;
  margin-bottom: 0;
  color: rgba(0,0,0,0.54);
}

section.next-steps {
  width: 100%;
  max-width: 1080px;
  margin: 128px auto;
  padding: 0 12px;
  text-align: center;
}

section.next-steps p {
  margin-top: 0;
  margin-bottom: 32px;
  color: rgba(0,0,0,0.54);
}

section.next-steps .buttons {
  display: flex;
  align-items: center;
  justify-content: center;
}

button {
  background: var(--color-accent);
  border: none;
  border-radius: 4px;
  color: white;

  margin: 8px 12px;
  font-size: 13px;
  font-weight: 500;
  padding: 12px 64px;
  text-transform: uppercase;
  outline: none;
  letter-spacing: 0.04em;
  transition: all .15s ease;
  cursor: pointer;

  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 3px 6px rgba(0,0,0,0.06);
  transition: all 200ms cubic-bezier(0.215, 0.610, 0.355, 1);
}

button:hover {
  background: var(--color-accent-light);
  transform: translateY(-1px);
  box-shadow: 0 2px 4px rgba(0,0,0,0.12), 0 4px 8px rgba(0,0,0,0.06);
}

button:active {
  background: var(--color-accent-dark);
  transform: translateY(1px);
  box-shadow: 0 0 2px rgba(0,0,0,0.12), 0 1px 3px rgba(0,0,0,0.06);
}

